test/types/range/cast-assign-init/illegal-assigns.1-5.good
illegal-assigns.chpl:11: error: assigning to a range with idxType color from a range with idxType uint(64) without an explicit cast
